--- a/NaimouzaHighSchool/Views/MainWindowView.xaml
+++ b/NaimouzaHighSchool/Views/MainWindowView.xaml
@@ -33,7 +33,6 @@
                 <MenuItem Header="Configuration">
                     <MenuItem Header="Group &amp; Subject" Click="MenuItem_Click_1"/>
                     <MenuItem Header="Subject Combo" Click="MenuItem_Click_5" />
-                    <MenuItem Header="Exam" Command="{Binding ShowExamViewCommand, Source={StaticResource vm}}"/>
                     <Separator />
                     <MenuItem Header="Session" Command="{Binding ShowSessionWindowCommand, Source={StaticResource vm}}"></MenuItem>
                 </MenuItem>
@@ -66,8 +65,9 @@
                 </MenuItem>
                 <MenuItem Header="Report">
                     <MenuItem Header="Export to Excel" Command="{Binding ShowExcelExportCommand, Source={StaticResource vm}}"/>
-                    <MenuItem Header="Dash Grid" Command="{Binding ShowDashGridCommand, Source={StaticResource vm}}"/>
+                    <!--<MenuItem Header="Dash Grid" Command="{Binding ShowDashGridCommand, Source={StaticResource vm}}"/>-->
                     <MenuItem Header="U-Dise" Command="{Binding ShowUDiseCommand, Source={StaticResource vm}}"/>
+                    <MenuItem Header="School Profile" Command="{Binding ShowSchoolProfileCommand, Source={StaticResource vm}}"/>
                 </MenuItem>
               
                 <MenuItem Header="Backup">
