print added at school profile

--- a/NaimouzaHighSchool/Views/MainWindowView.xaml
+++ b/NaimouzaHighSchool/Views/MainWindowView.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:MainVm="clr-namespace:NaimouzaHighSchool.ViewModels"
-        Title="Naimouza High School" Height="500" Width="825" Icon="/NaimouzaHighSchool;component/icon.ico">
+        Title="Naimouza High School" Height="700" Width="925" Icon="/NaimouzaHighSchool;component/icon.ico" WindowStartupLocation="CenterScreen">
     <Window.Resources>
         <MainVm:MainWindowViewModel x:Key="vm"></MainVm:MainWindowViewModel>
         <Style x:Key="borderSchoolHeading" TargetType="Border">
@@ -39,6 +39,7 @@
                 <MenuItem Header="Staff">
                     <MenuItem Header="Detail" Command="{Binding ShowStaffDetailViewCommand, Source={StaticResource vm}}"/>
                     <Separator />
+                    <MenuItem Header="Staff Entry" Command="{Binding ShowStaffAddViewCommand, Source={StaticResource vm}}"/>
                     <MenuItem Header="Teacher Entry" Command="{Binding ShowTeacherEntryViewCommand, Source={StaticResource vm}}"/>
                     <MenuItem Header="Import from excel" Command="{Binding ShowStaffExcelImportWindowCommand, Source={StaticResource vm}}"/>
                 </MenuItem>
