--- a/NaimouzaHighSchool/Views/StudentDataWriteView.xaml
+++ b/NaimouzaHighSchool/Views/StudentDataWriteView.xaml
@@ -7,7 +7,7 @@
         xmlns:s="clr-namespace:System;assembly=mscorlib"
         xmlns:local="clr-namespace:NaimouzaHighSchool.ViewModels"
         mc:Ignorable="d"
-        Title="StudentDataWriteView" Height="500" Width="800">
+        Title="Student Data Entry" Height="500" Width="800" WindowStartupLocation="CenterScreen">
     <Window.Resources>
         <local:StudentDataWriteViewModel x:Key="saVm" />
     </Window.Resources>
