--- a/NaimouzaHighSchool/views/PromotionView.xaml
+++ b/NaimouzaHighSchool/views/PromotionView.xaml
@@ -19,9 +19,17 @@
         <Border>
             <TextBlock Text="Promotion"/>
         </Border>
-        <StackPanel Grid.Row="1" Orientation="Vertical">
-            <StackPanel Orientation="Horizontal">
-                <Label Width="70" Margin="2" Content="Session"/>
+        <Grid Grid.Row="1">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition />
+            </Grid.ColumnDefinitions>
+            <Label Margin="2" Content="Previous Session"/>
+            <StackPanel Orientation="Horizontal" Grid.Column="1">
                 <xctk:IntegerUpDown Margin="2"
                             Value="{Binding StartYear, Source={StaticResource pvm}, Mode=TwoWay}"
                             Width="65">
@@ -31,26 +39,45 @@
                             Value="{Binding EndYear, Source={StaticResource pvm}, Mode=TwoWay}"
                             Width="65">
                 </xctk:IntegerUpDown>
-            </StackPanel>
-            <StackPanel Orientation="Horizontal">
-                <Label Width="70" Content="Class" Margin="2"/>
+                <Label Content="Class" Margin="2"/>
                 <ComboBox Margin="2"
                     ItemsSource="{Binding SchoolClass, Source={StaticResource pvm}}"
                     SelectedIndex="{Binding SchoolClassIndex, Source={StaticResource pvm}}"
-                    Width="100" />
+                    Width="70" />
                 <Label Content="Section" Margin="2"/>
                 <ComboBox Margin="2"
                     ItemsSource="{Binding SchoolSection, Source={StaticResource pvm}}"
                     SelectedIndex="{Binding SchoolSectionIndex, Source={StaticResource pvm}}"
-                    Width="100"/>
+                    Width="70"/>
             </StackPanel>
-            <Button Content="Show" Width="100" Margin="76, 2, 2, 2"
-                    Command="{Binding GetDataCommand, Source={StaticResource pvm}}"
-                    HorizontalAlignment="Left"/>
+            <Label Margin="2" Grid.Row="1" Content="New Session"/>
+            <StackPanel Grid.Row="1" Orientation="Horizontal" Grid.Column="1">
+                <xctk:IntegerUpDown Margin="2"
+                            Value="{Binding NewSessionStartYear, Source={StaticResource pvm}, Mode=TwoWay}"
+                            Width="65">
+                </xctk:IntegerUpDown>
+                <Label Content="-" />
+                <xctk:IntegerUpDown Margin="2"
+                            Value="{Binding NewSessionEndYear, Source={StaticResource pvm}, Mode=TwoWay}"
+                            Width="65">
+                </xctk:IntegerUpDown>
+                <Button Content="Show" Width="100" Margin="43, 2, 2, 2"
+                    Command="{Binding GetDataCommand, Source={StaticResource pvm}}"/>
+            </StackPanel>
+        </Grid>
+        <StackPanel Grid.Row="1" Orientation="Vertical">
+            
+            <StackPanel Orientation="Horizontal">
+                
+                
+                
+            </StackPanel>
+            
         </StackPanel>
         <Grid Grid.Row="2">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="2*"/>
+                <ColumnDefinition Width="Auto" />
                 <ColumnDefinition />
             </Grid.ColumnDefinitions>
             <DataGrid 
@@ -59,13 +86,14 @@
                 VerticalGridLinesBrush="LightBlue"
                 AutoGenerateColumns="False"
                 CanUserAddRows="False"
+                SelectedIndex="{Binding PlistIndex, Source={StaticResource pvm}}"
                 Margin="2">
                 <DataGrid.Columns>
                     <DataGridTextColumn Header="Name" Binding="{Binding Path=StudentName}" IsReadOnly="True"/>
                     <DataGridTextColumn Header="Old Status" Binding="{Binding Path=OldCombined}" IsReadOnly="True"/>
                     <DataGridTextColumn Header="New Class" Binding="{Binding Path=NewStudyClass}" IsReadOnly="True"/>
                     <DataGridTextColumn Header="New Section" Binding="{Binding Path=NewSection, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
-                    <DataGridTextColumn Header="New Roll" Binding="{Binding Path=NewRoll, Mode=TwoWay}"/>
+                    <DataGridTextColumn Header="New Roll" Binding="{Binding Path=NewRoll, Mode=TwoWay, UpdateSourceTrigger=LostFocus}"/>
                 </DataGrid.Columns>
                 <DataGrid.Resources>
                     <Style TargetType="DataGridRow">
@@ -83,34 +111,30 @@
                     </Style>
                 </DataGrid.Resources>
             </DataGrid>
-            <Grid Grid.Column="1">
+            <GridSplitter Grid.Column="1" Width="3" VerticalAlignment="Stretch" HorizontalAlignment="Center" ShowsPreview="False" />
+            <Grid Grid.Column="2">
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="Auto" />
-                    <RowDefinition Height="Auto"/>
-                    <RowDefinition Height="Auto"/>
+                    <RowDefinition />
+                    <RowDefinition />
                 </Grid.RowDefinitions>
-                <GroupBox Header="New Session">
-                    <Grid>
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="Auto"/>
-                            <RowDefinition Height="Auto"/>
-                        </Grid.RowDefinitions>
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="Auto"/>
-                            <ColumnDefinition />
-                        </Grid.ColumnDefinitions>
-                        <Label Content="Start Year : "/>
-                        <Label Grid.Column="1" Content="{Binding NewSessionStartYear, Source={StaticResource pvm}}"/>
-                        <Label Grid.Row="1" Content="End Year : "/>
-                        <Label Grid.Row="1" Grid.Column="1" Content="{Binding NewSessionEndYear, Source={StaticResource pvm}}" />
-                    </Grid>
-                </GroupBox>
-                <Button Margin="2" Grid.Row="1" 
-                        Command="{Binding SaveDataCommand, Source={StaticResource pvm}}"
-                        Content="Promote" Width="120" HorizontalAlignment="Left"/>
-                <GroupBox Grid.Row="2" Header="Message">
-                    <TextBlock Text="{Binding DupMsg, Source={StaticResource pvm}}"/>
-                </GroupBox>
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition />
+                    </Grid.RowDefinitions>
+                    <Border>
+                        <TextBlock Text="{Binding PrevSessionHeader, Source={StaticResource pvm}}"/>
+                    </Border>
+                </Grid>
+                <Grid Grid.Row="1">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition />
+                    </Grid.RowDefinitions>
+                    <Border>
+                        <TextBlock Text="{Binding NewSessionHeader, Source={StaticResource pvm}}"/>
+                    </Border>
+                </Grid>
             </Grid>
         </Grid>
     </Grid>
