--- a/NaimouzaHighSchool/views/StaffAddView.xaml
+++ b/NaimouzaHighSchool/views/StaffAddView.xaml
@@ -60,9 +60,6 @@
                                 <RowDefinition Height="Auto"/>
                                 <RowDefinition Height="Auto"/>
                                 <RowDefinition Height="Auto"/>
-                                <RowDefinition Height="Auto"/>
-                                <RowDefinition Height="Auto"/>
-                                <RowDefinition Height="Auto"/>
                             </Grid.RowDefinitions>
                             <!--row 1-->
                             <StackPanel Orientation="Horizontal">
@@ -139,30 +136,203 @@
                             <!--row 6-->
                             <Label VerticalAlignment="Center" Grid.Row="5" Content="Date of Birth"/>
                             <StackPanel Grid.Row="5" Grid.Column="1" Orientation="Horizontal">
-                                <StackPanel Orientation="Vertical">
-                                    <Label Content="YYYY" Margin="2, 2, 2, 0"/>
-                                    <ComboBox Width="80" 
+                                
+                                <Label Content="YYYY"/>
+                                <ComboBox Width="70" 
                                               ItemsSource="{Binding YYYY, Source={StaticResource sfVm}}"
                                               SelectedIndex="{Binding DorYYIndex, Source={StaticResource sfVm}, Mode=TwoWay}"
-                                              Margin="2, 0, 2, 2"/>
-                                </StackPanel>
-                                <StackPanel Orientation="Vertical">
-                                    <Label Content="MM" Margin="2, 2, 2, 0"/>
-                                    <ComboBox Width="80" 
+                                              />
+                                
+                                <Label Content="MM"/>
+                                <ComboBox Width="75" 
                                               ItemsSource="{Binding MM, Source={StaticResource sfVm}}"
                                               SelectedIndex="{Binding DorMMIndex, Source={StaticResource sfVm}, Mode=TwoWay}"
-                                              Margin="2, 0, 2, 2"/>
-                                </StackPanel>
-                                <StackPanel Orientation="Vertical">
-                                    <Label Content="DD" Margin="2, 2, 2, 0"/>
-                                    <ComboBox Width="80" 
-                                              ItemsSource="{Binding DD, Source={StaticResource sfVm}}"
+                                              />
+                             
+                                <Label Content="DD" />
+                                <ComboBox Width="65" 
+                                              ItemsSource="{Binding DDRt, Source={StaticResource sfVm}}"
                                               SelectedIndex="{Binding DorDDIndex, Source={StaticResource sfVm}, Mode=TwoWay}"
-                                              Margin="2, 0, 2, 2"/>
-                                </StackPanel>
+                                              />
+                                
                             </StackPanel>
+                            <Label Grid.Row="5" Grid.Column="2" Content="Bill Type/Salary Source" />
+                            <ComboBox Grid.Row="5" Grid.Column="3" 
+                                      ItemsSource="{Binding SalarySourceList, Source={StaticResource sfVm}}"
+                                      Text="{Binding SalarySource, Source={StaticResource sfVm}, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                                      IsEditable="True"/>
+                            
+                            <!--row 7-->
+                            <Label Grid.Row="6" Content="Joining Date" ToolTip="Date of joining the present post"/>
+                            <StackPanel Grid.Row="6" Grid.Column="1" Orientation="Horizontal">
+
+                                <Label Content="YYYY" />
+                                <ComboBox Width="70" 
+                                              ItemsSource="{Binding YYYY, Source={StaticResource sfVm}}"
+                                              SelectedIndex="{Binding DojYYIndex, Source={StaticResource sfVm}, Mode=TwoWay}"
+                                              />
+
+                                <Label Content="MM" />
+                                <ComboBox Width="75" 
+                                              ItemsSource="{Binding MM, Source={StaticResource sfVm}}"
+                                              SelectedIndex="{Binding DojMMIndex, Source={StaticResource sfVm}, Mode=TwoWay}"
+                                              />
+
+                                <Label Content="DD" />
+                                <ComboBox Width="65" 
+                                              ItemsSource="{Binding DDJn, Source={StaticResource sfVm}}"
+                                              SelectedIndex="{Binding DojDDIndex, Source={StaticResource sfVm}, Mode=TwoWay}"
+                                              />
+                            </StackPanel>
+                            <Label Grid.Row="6" Grid.Column="2" Content="Employee Group"/>
+                            <ComboBox Grid.Row="6" Grid.Column="3" Width="100" HorizontalAlignment="Left" 
+                                      ItemsSource="{Binding EmpGroupList, Source={StaticResource sfVm}}"
+                                      Text="{Binding EmpGroup, Source={StaticResource sfVm}, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                                      IsEditable="True"/>
+
+                            <!--row 8-->
+                            <Label Grid.Row="7" Content="Apprv. Qualification"/>
+                            <ComboBox Grid.Row="7" Grid.Column="1"
+                                      ItemsSource="{Binding EmpGroupList, Source={StaticResource sfVm}}"
+                                      Text="{Binding EmpGroup, Source={StaticResource sfVm}, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                                      IsEditable="True"/>
+                            <Label Grid.Row="7" Grid.Column="2" Content="Grade Pay" />
+                            <TextBox Grid.Row="7" Grid.Column="3" 
+                                     Text="{Binding GradePay, Source={StaticResource sfVm}, Mode=TwoWay}"
+                                     Width="140" HorizontalAlignment="Left"/>
+                            
+                            <!--row 9-->
+                            <Label Grid.Row="8" Content="Addl Qualification" ToolTip="Additional Qualification"/>
+                            <TextBox Grid.Row="8" Grid.Column="1" Text="{Binding AdlQualification, Source={StaticResource sfVm}, Mode=TwoWay}"/>
+                            <Label Grid.Row="8" Grid.Column="2" Content="Basic Pay"/>
+                            <TextBox Grid.Row="8" Grid.Column="3" 
+                                     Text="{Binding BasicPay, Source={StaticResource sfVm}, Mode=TwoWay}"
+                                     Width="140" HorizontalAlignment="Left"/>
+                            
+                            <!--row 10-->
+                            <Label Grid.Row="9" Content="Academic Section"/>
+                            <TextBox Grid.Row="9" Grid.Column="1" Text="{Binding AcademicSection, Source={StaticResource sfVm}, Mode=TwoWay}"/>
+                            <Label Grid.Row="9" Grid.Column="2" Content="Pay Scale"/>
+                            <TextBox Grid.Row="9" Grid.Column="3" 
+                                     Width="200" HorizontalAlignment="Left"
+                                     Text="{Binding PayScale, Source={StaticResource sfVm}, Mode=TwoWay}"/>
+                        
+                            <!--row 11-->
+                            <Label Grid.Row="10" Content="Aprv. Apnt. No." ToolTip="Approval Appointment Number"/>
+                            <TextBox Grid.Row="10" Grid.Column="1" 
+                                     Text="{Binding ApprvApntNo, Source={StaticResource sfVm}}"
+                                     Width="200" HorizontalAlignment="Left"/>
+                            <Label Grid.Row="10" Grid.Column="2" Content="Next Incr. Date"/>
+                            <StackPanel Grid.Row="10" Grid.Column="3" Orientation="Horizontal">
+                                <Label Content="YYYY" />
+                                <ComboBox Width="70" 
+                                              ItemsSource="{Binding YYYY, Source={StaticResource sfVm}}"
+                                              SelectedIndex="{Binding DoIncrYYIndex, Source={StaticResource sfVm}, Mode=TwoWay}"
+                                              />
+
+                                <Label Content="MM" />
+                                <ComboBox Width="75" 
+                                              ItemsSource="{Binding MM, Source={StaticResource sfVm}}"
+                                              SelectedIndex="{Binding DoIncrMMIndex, Source={StaticResource sfVm}, Mode=TwoWay}"
+                                              />
+
+                                <Label Content="DD" />
+                                <ComboBox Width="65" 
+                                              ItemsSource="{Binding DDIncr, Source={StaticResource sfVm}}"
+                                              SelectedIndex="{Binding DoIncrDDIndex, Source={StaticResource sfVm}, Mode=TwoWay}"
+                                              />
+                            </StackPanel>
+                            
+                            <!--row 12-->
+                            <Label Grid.Row="11" Content="Apprv. Apnt. Date" ToolTip="Approval Appointment Date"/>
+                            <StackPanel Grid.Row="11" Grid.Column="1" Orientation="Horizontal">
+                                <Label Content="YYYY" />
+                                <ComboBox Width="70" 
+                                              ItemsSource="{Binding YYYY, Source={StaticResource sfVm}}"
+                                              SelectedIndex="{Binding DoAadYYIndex, Source={StaticResource sfVm}, Mode=TwoWay}"
+                                              />
+
+                                <Label Content="MM" />
+                                <ComboBox Width="75" 
+                                              ItemsSource="{Binding MM, Source={StaticResource sfVm}}"
+                                              SelectedIndex="{Binding DoAadMMIndex, Source={StaticResource sfVm}, Mode=TwoWay}"
+                                              />
+
+                                <Label Content="DD" />
+                                <ComboBox Width="65" 
+                                              ItemsSource="{Binding DDAad, Source={StaticResource sfVm}}"
+                                              SelectedIndex="{Binding DoAadDDIndex, Source={StaticResource sfVm}, Mode=TwoWay}"
+                                              />
+                            </StackPanel>
+                            <Label Grid.Row="11" Grid.Column="2" Content="Increment Amount"/>
+                            <TextBox Grid.Row="11" Grid.Column="3" 
+                                     Width="140" HorizontalAlignment="Left"
+                                     Text="{Binding IncrementAmount, Source={StaticResource sfVm}, Mode=TwoWay}"/>
+                     
+                            <!--row 13-->
+                            <Label Grid.Row="12" Content="Pay In Payband"/>
+                            <TextBox Grid.Row="12" Grid.Column="1" Text="{Binding PayInPayBand, Source={StaticResource sfVm}, Mode=TwoWay}"/>
+                            <Label Grid.Row="12" Grid.Column="2" Content="Payband"/>
+                            <ComboBox Grid.Row="12" Grid.Column="3" Width="100" HorizontalAlignment="Left" 
+                                      ItemsSource="{Binding PayBandList, Source={StaticResource sfVm}}"
+                                      Text="{Binding PayBand, Source={StaticResource sfVm}, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                                      IsEditable="True"/>
+
                         </Grid>
                     </ScrollViewer>
+                </TabItem>
+                <TabItem Header="Bank">
+                    <Grid Margin="50">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="Auto"/>
+                            <ColumnDefinition Width="Auto"/>
+                            <ColumnDefinition />
+                        </Grid.ColumnDefinitions>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto"/>
+                            <RowDefinition Height="Auto"/>
+                            <RowDefinition Height="Auto"/>
+                            <RowDefinition Height="Auto"/>
+                            <RowDefinition Height="Auto"/>
+                            <RowDefinition Height="Auto"/>
+                        </Grid.RowDefinitions>
+                        
+                        <Label Content="Account No."/>
+                        <Label Content=" : " Grid.Column="1"/>
+                        <TextBox Grid.Column="2" Width="200" 
+                                 Text="{Binding AccountNo, Source={StaticResource sfVm}, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                                 HorizontalAlignment="Left" />
+                        
+                        <Label Grid.Row="1" Content="Bank's IFSC code"/>
+                        <Label Grid.Column="1" Grid.Row="1" Content=" : " />
+                        <ComboBox Grid.Column="2" Grid.Row="1" 
+                                  Text="{Binding IFSC, Source={StaticResource sfVm}, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                                  IsEditable="True" Width="200" HorizontalAlignment="Left"/>
+                       
+                        <Label Grid.Row="2" Content="Bank Name" />
+                        <Label Content=" : " Grid.Row="2" Grid.Column="1"/>
+                        <TextBox Grid.Row="2" Grid.Column="2" 
+                                 Text="{Binding BankName, Source={StaticResource sfVm}, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                                 HorizontalAlignment="Left" Width="300"/>
+
+                        <Label Grid.Row="3" Content="Bank Branch" />
+                        <Label Content=" : " Grid.Row="3" Grid.Column="1"/>
+                        <TextBox Grid.Row="3" Grid.Column="2" 
+                                 Text="{Binding BankBranch, Source={StaticResource sfVm}, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                                 HorizontalAlignment="Left" Width="300"/>
+
+                        <Label Grid.Row="4" Content="Branch Code" />
+                        <Label Content=" : " Grid.Row="4" Grid.Column="1"/>
+                        <TextBox Grid.Row="4" Grid.Column="2" 
+                                 Text="{Binding BranchCode, Source={StaticResource sfVm}, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                                 HorizontalAlignment="Left" Width="150" Height="27" Margin="2,2,0,0" VerticalAlignment="Top"/>
+
+                        <Label Grid.Row="5" Content="Branch MICR" />
+                        <Label Content=" : " Grid.Row="5" Grid.Column="1"/>
+                        <TextBox Grid.Row="5" Grid.Column="2" 
+                                 Text="{Binding MICR, Source={StaticResource sfVm}, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                                 HorizontalAlignment="Left" Width="150"/>
+                    </Grid>
                 </TabItem>
                 <TabItem Header="Personal">
                     
